--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
     "scripts": {
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "mkdir -p storage/framework/cache/data storage/framework/sessions storage/framework/views bootstrap/cache",
             "@php artisan package:discover --ansi"
         ],
         "post-root-package-install": [
