--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4",
         "axios": "^1.7.4",
         "laravel-vite-plugin": "^1.0",
-        "vite": "^5.0",
         "postcss": "^8.4",
         "tailwindcss": "^3.4",
-        "autoprefixer": "^10.4"
+        "vite": "^5.0"
     },
     "dependencies": {
+        "@tailwindcss/postcss": "^4.1.18",
         "alpinejs": "^3.14"
     }
 }
